# KinoMir

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  mypy.ini  pyproject.toml
KinoMir/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
api/: apps.py  filters.py  serializers.py  urls.py  views.py  yasg.py
core/: admin.py  choices.py  forms.py  models.py  services.py  tasks.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py
core/static/core/css/: feedback.css
core/templates/core/: feedback.html  template_feedback.html
fixtures/: film_participant.json  genre.json  movie.json  person.json  serial.json  serial_participant.json
movies/: admin.py  apps.py  choices.py  models.py  services.py  urls.py  utils.py  views.py
movies/migrations/: 0001_initial.py
movies/static/movies/css/: movie-detail.css  movies-list.css
movies/static/movies/js/: search.js
movies/templates/movies/: movie-detail.html  movies-list.html
nginx/: Dockerfile  nginx.conf
serials/: admin.py  apps.py  models.py  services.py  urls.py  views.py
serials/migrations/: 0001_initial.py
serials/static/serials/css/: serial-detail.css  serials-list.css
serials/static/serials/js/: search.js
serials/templates/serials/: serial-detail.html  serials-list.html
static/css/: style.css
static/js/: header.js
templates/: 404.html  base.html
templates/drf-yasg/: redoc.html
templates/includes/: footer.html  header.html
templates/rest_framework/: api.html
